model.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-deployment
spec:
  selector:
    matchLabels:
      app: model
  replicas: 12
  template:
    metadata:
      labels:
        app: model
    spec:
      containers:
      - name: model
        image: benmkent/cookiebenchmark:latest
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 1
            memory: 1Gi
